# kbs2

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml  zizmor.yml
contrib/: README.md
contrib/ext-cmds/kbs2-audit-pass/: README.md  kbs2-audit-pass
contrib/ext-cmds/kbs2-choose-pass/: README.md  kbs2-choose-pass  kbs2-choose-pass.karabiner.json
contrib/ext-cmds/kbs2-choose-pass/kbs2-choose-pass.workflow/Contents/: Info.plist  document.wflow
contrib/ext-cmds/kbs2-dmenu-pass/: README.md  kbs2-dmenu-pass
contrib/ext-cmds/kbs2-git-ssh-signing/: README.md  kbs2-git-ssh-signing
contrib/ext-cmds/kbs2-gpg-add/: README.md  kbs2-gpg-add
contrib/ext-cmds/kbs2-kbsecret-env-import/: README.md  kbs2-kbsecret-env-import
contrib/ext-cmds/kbs2-kbsecret-login-import/: README.md  kbs2-kbsecret-login-import
contrib/ext-cmds/kbs2-qr/: README.md  kbs2-qr
contrib/ext-cmds/kbs2-snip/: README.md  kbs2-snip
contrib/ext-cmds/kbs2-ssh-add/: README.md  kbs2-ssh-add
contrib/ext-cmds/kbs2-yad-login/: README.md  kbs2-yad-login
contrib/hooks/error-hook-notify/: README.md  error-hook-notify
contrib/hooks/pass-clear-notify/: README.md  pass-clear-notify
contrib/hooks/push-repo/: README.md  push-repo
src/: main.rs
src/kbs2/: agent.rs  backend.rs  command.rs  config.rs  error.rs  generator.rs  input.rs  mod.rs  record.rs  session.rs  util.rs
tests/: common.rs  test_kbs2.rs  test_kbs2_init.rs  test_kbs2_new.rs  test_kbs2_rename.rs  test_kbs2_rm.rs
tests/common/: mod.rs
