[package]
name = "kbs2"
description = "A secret manager backed by age"
license = "MIT"
homepage = "https://github.com/woodruffw/kbs2"
repository = "https://github.com/woodruffw/kbs2"
version = "0.6.0"
authors = ["William Woodruff <william@yossarian.net>"]
edition = "2021"
readme = "README.md"
keywords = ["cli", "password-manager", "crypto"]
categories = ["command-line-utilities", "cryptography"]

[package.metadata.release]
dev-version = false
publish = false # handled by GitHub Actions
push = true

[[package.metadata.release.pre-release-replacements]]
file = "README.md"
# TODO: https://github.com/sunng87/cargo-release/issues/241
search = "\\d+\\.\\d+\\.\\d+"
replace = "{{version}}"
exactly = 3

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "Unreleased"
replace = "{{version}}"
exactly = 2

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "ReleaseDate"
replace = "{{date}}"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "\\.\\.\\.HEAD"
replace = "...{{tag_name}}"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "<!-- @next-header@ -->"
replace = "<!-- @next-header@ -->\n\n## [Unreleased] - ReleaseDate"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "<!-- @next-url@ -->"
replace = "<!-- @next-url@ -->\n[Unreleased]: https://github.com/woodruffw/kbs2/compare/{{tag_name}}...HEAD"
exactly = 1

[package.metadata.deb]
depends = "$auto, libxcb-shape0-dev, libxcb-xfixes0-dev"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
age = { version = "0.8.1", features = ["armor"] }
anyhow = "1.0"
atty = "0.2.14"
clap = { version = "4.0.8", features = ["deprecated", "env"] }
clap_complete = "4.0.2"
clipboard = "0.5.0"
daemonize = "0.4"
env_logger = "0.9"
home = "0.5"
inquire = "0.4"
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4"
nix = "0.25.0"
pinentry = "0.5"
rand = "0.8"
rpassword = "7.0"
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "2.1.2"
shell-words = "1.1.0"
tempfile = "3"
toml = "0.5.9"
whoami = "1.2"
xdg = "2.4"

[dev-dependencies]
assert_cmd = "2"
